# geomapi-server

./: .buildinfo  .gitignore  CHANGELOG.md  CoordinateConverter.py  README.md  app.py  genindex.html  index.html  iptest.py  objects.inv  proxyserver.py  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: api.CoordinateConverter.doctree  api.doctree  modules.doctree
.doctrees/information/: getting started.doctree
.github/workflows/: docs.yml
_sources/api/: api.CoordinateConverter.rst.txt
_sources/information/: getting started.md.txt
api/: CoordinateConverter.py  __init__.py  api.CoordinateConverter.html  api.html  modules.html
docs/source/: conf.py  index.rst
docs/source/_static/: style.css
docs/source/api/: api.rst
information/: getting started.html
templates/: add-session.html  geolocation.html  index.html  layout.html
