[metadata]
name =geomapi-server
version = 0.0.1
author = Vermandere
description = A standard library to manage geomatic data
long_description = file: README.md
long_description_content_type = text/markdown
url = www.github.be/jellekul/geomapi-server
keywords = Geomatics, alignment, monitoring, validation, progress
License = GNU
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    flask
    geomapi
